# Forschungsprojekt

./: .gitignore  FaceMovie.avi  Readme-Pipeline.rtf  Readme.rtf  sceneFlowTest_firstInterpolationRun.mat  sftest_constraints_fixed1_bb.fig  sftest_interpolated.fig  sftest_interpolated_fixed1.fig  sftest_orig_ERROR.fig  sftest_orig_V1.fig  sftest_smoothed_V1.fig
CppPCL/: README.md
CppPCL/SurfaceRecons1/: CMakeLists.txt  SurfaceRecons1.cpp
CppPCL/SurfaceRecons2/: CMakeLists.txt  SurfaceRecons2.cpp
Meshlab/: Mesh_Bidirectional_Final.ply
Sequence/: KLTFaceDetec.m  ReconstructFirstFrame.m  ReconstructFrame.m  SaveAllFrames.m  WarpError.m  groundTruthOFlow.m  groundTruthOFlowAngle.m  groundTruthOfFlow2.m  gtofTest.m  oFlow-Pipeline-error-analysis.m  oFlowPipelineErrorAnalysis.m  oflow.m  oflow2.m  oflow3.m  oflowTest.m  visualizeOpticalFlow.m
Static/: Pipeline.m
_R1_felix/: mesh_frame_10.ply  mesh_frame_11.ply  mesh_frame_12.ply  mesh_frame_2.ply  mesh_frame_3.ply  mesh_frame_4.ply  mesh_frame_5.ply  mesh_frame_6.ply  mesh_frame_7.ply  mesh_frame_8.ply  mesh_frame_9.ply
_R1_ramo/: mesh_frame_10.ply  mesh_frame_11.ply  mesh_frame_12.ply  mesh_frame_2.ply  mesh_frame_3.ply  mesh_frame_4.ply  mesh_frame_5.ply  mesh_frame_6.ply  mesh_frame_7.ply  mesh_frame_8.ply  mesh_frame_9.ply
_R2_felix/: mesh_frame_10.ply  mesh_frame_11.ply  mesh_frame_12.ply  mesh_frame_2.ply  mesh_frame_3.ply  mesh_frame_4.ply  mesh_frame_5.ply  mesh_frame_6.ply  mesh_frame_7.ply  mesh_frame_8.ply  mesh_frame_9.ply  sceneFlowData_error.mat
_R2_ramo/: mesh_frame_10.ply  mesh_frame_11.ply  (+9 more)
(+135 files in other folders)
